--- a/html/home.html
+++ b/html/home.html
@@ -17,10 +17,10 @@
         <span class="logo-text">Garbage Collection Management System</span>
       </div>
       <ul class="links">
-        <li><a href="#" class="active">HOME</a></li>
-        <li><a href="#">ADMIN</a></li>
-        <li><a href="#">DRIVER</a></li>
-        <li><a href="#">USER</a></li>
+        <li><a href="./home.html" class="active">HOME</a></li>
+        <li><a href="./admin/login.html">ADMIN</a></li>
+        <li><a href="./driver/login.html">DRIVER</a></li>
+        <li><a href="./user/signup.html">USER</a></li>
       </ul>
     </nav>
     <header>
@@ -45,51 +45,6 @@
       </div>
     </header>
     <main>
-      <div class="pricing">
-        <div class="info">
-          <h2>Available packages</h2>
-          <hr />
-        </div>
-        <div class="pricing_cards">
-          <div class="residential" id="card">
-            <h2>Residential</h2>
-            <p>
-              This pricing is applicable for people living in different
-              residential areas.
-            </p>
-            <p>Price: $30</p>
-            <button>Request Now</button>
-          </div>
-          <div class="business" id="card">
-            <h2>Business</h2>
-            <p>
-              This pricing is applicable for different businesses in different
-              residential areas.
-            </p>
-            <p>Price: $100</p>
-            <button>Request Now</button>
-          </div>
-          <div class="industrial" id="card">
-            <h2>Industrial</h2>
-            <p>
-              This pricing is applicable for industries in different residential
-              areas.
-            </p>
-            <p>Price: $150</p>
-            <button>Request Now</button>
-          </div>
-          <div class="construction" id="card">
-            <h2>Construction site</h2>
-            <p>
-              This pricing is applicable for construction sites in different
-              residential areas.
-            </p>
-            <p>Price: $200</p>
-            <button>Request Now</button>
-          </div>
-        </div>
-      </div>
-
       <div class="About-Us">
         <div class="about-title">About Us</div>
         <h2>Our Goal</h2>
@@ -100,7 +55,7 @@
           garbage.
         </p>
         <h2>What makes us unique?</h2>
-        <ol type="1">
+        <ul>
           <li>
             <p>
               Good customer service is a pivotal aspect of our company. Residents
@@ -128,9 +83,52 @@
               distribution of essential services.
             </p>
           </li>
-        </ol>
+        </ul>
 
     </div>
+      <div class="pricing">
+        <div class="info">
+          <h2>Available packages</h2>
+        </div>
+        <div class="pricing_cards">
+          <div class="residential" id="card">
+            <h2>Residential</h2>
+            <p>
+              This pricing is applicable for people living in different
+              residential areas.
+            </p>
+            <span>$30</span>
+            <button>Request Now</button>
+          </div>
+          <div class="business" id="card">
+            <h2>Business</h2>
+            <p>
+              This pricing is applicable for different businesses in different
+              residential areas.
+            </p>
+            <span>$100</span>
+            <button>Request Now</button>
+          </div>
+          <div class="industrial" id="card">
+            <h2>Industrial</h2>
+            <p>
+              This pricing is applicable for industries in different residential
+              areas.
+            </p>
+            <span>$150</span>
+            <button>Request Now</button>
+          </div>
+          <div class="construction" id="card">
+            <h2>Construction site</h2>
+            <p>
+              This pricing is applicable for construction sites in different
+              residential areas.
+            </p>
+            <span>$200</span>
+            <button>Request Now</button>
+          </div>
+        </div>
+      </div>
       
     </main>
     <footer>
