--- a/html/user/login.html
+++ b/html/user/login.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../css/user/userlogin.css">
+    <title>Admin Login</title>
 </head>
 <body>
+    <main>
+            <div class="project-title">Garbage Collection Management System</div>
+            <form action="#">
+                <div class="form-heading">Log into your Account</div>
+                <div><input type="text" name="name" id="name" placeholder="Username"></div>
+                <div><input type="password" name="password" id="password" placeholder="User Password"></div>
+                <div><input type="checkbox" name="remember" id="remember">Remember me</div>
+                <div><button type="submit">LOGIN</button></div>
+                <ul>
+                    <li><a href="">Forgot password?</a></li>
+                    <li>Don't have an account? <a href="./signup.html">Signup</a></li>
+                    <li><a href="../home.html">Back to Home</a></li>
+                </ul>
+            </form>
+
+    </main>
     
 </body>
 </html>
