--- a/html/user/signup.html
+++ b/html/user/signup.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../css/user/usersignup.css">
+    <title>User Signup</title>
 </head>
 <body>
+    <main>
+            <div class="project-title">Garbage Collection Management System</div>
+            <form action="#">
+                <div class="form-heading">Register with us</div>
+                <div><input type="text" name="name" id="name" placeholder="Enter your name"></div>
+                <div><input type="text" name="username" id="username" placeholder="Enter your username"></div>
+                <div><input type="text" name="number" id="number" placeholder="Enter your Mobile Number"></div>
+                <div><input type="email" name="email" id="email" placeholder="Enter your email id"></div>
+                <div><input type="password" name="password" id="password" placeholder="Password"></div>
+                <div><button type="submit">Signup</button></div>
+                <ul>
+                    <li>Already have an account? <a href="./login.html">Sign in</a></li>
+                    <li><a href="../home.html">Back to Home</a></li>
+                </ul>
+            </form>
+
+    </main>
     
 </body>
 </html>
