--- a/html/admin/login.html
+++ b/html/admin/login.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../css/admin/login.css">
     <title>Admin Login</title>
 </head>
 <body>
-    <nav></nav>
-    <main></main>
+    <main>
+            <div class="project-title">Garbage Collection Management System</div>
+            <form action="#">
+                <div class="form-heading">Log into your Account</div>
+                <div><input type="text" name="name" id="name" placeholder="Admin Username"></div>
+                <div><input type="password" name="password" id="password" placeholder="Admin Password"></div>
+                <div><input type="checkbox" name="remember" id="remember">Remember me</div>
+                <div><button type="submit">LOGIN</button></div>
+                <ul>
+                    <li><a href="#">Forgot password?</a></li>
+                    <li><a href="../home.html">Back to Home</a></li>
+                </ul>
+            </form>
+
+    </main>
     
 </body>
 </html>
