--- a/html/admin/dashboard.html
+++ b/html/admin/dashboard.html
@@ -31,8 +31,8 @@
                 <ul>
                     <li> <a href="">Dashboard</a></li>
                     <li> <a href="">Driver</a></li>
-                    <li><a href="">Complain</a></li>
-                    <li><a href="">Driver Complain Response</a></li>
+                    <li><a href="">Complains</a></li>
+                    <li><a href="">Driver Collection Response</a></li>
                     <li><a href="">Registered Users</a></li>
                     <li><a href="">Collection Requests</a></li>
                     <li><a href="">Payments</a></li>
