--- a/html/driver/dashboard.html
+++ b/html/driver/dashboard.html
@@ -30,8 +30,8 @@
             <div class="side-links">
                 <ul>
                     <li><a href="">Dashboard</a></li>
-                    <li> <a href="">Assigned Garbage Bin</a></li>
-                    <li></i> <a href="">Assign Complain</a></li>
+                    <li></i> <a href="">Assigned Requsts</a></li>
+                    <li><a href="">Complains</a></li>
                     <li> <a href="">Report</a></li>
                     <li><a href="">Search</a></li>
                 </ul>
@@ -45,32 +45,20 @@
                     <button id="user-profile">View Profile</button>
                     <div class="content-cards">
                             <div class="content-card">
-                            <div class="content-card-title">Total Assign Complain</div>
+                            <div class="content-card-title">Total Assigned Requests</div>
                             <div class="content-card-count">0</div>
                             <div class="content-card-details">
                             <a href="#">View Details</a></div>
                             </div>
                             <!-- Other cards -->
                             <div class="content-card">
-                            <div class="content-card-title">Inprogress Complain</div>
+                            <div class="content-card-title">Inprogress Requsts</div>
                             <div class="content-card-count">0</div>
                             <div class="content-card-details">
                             <a href="#">View Details</a></div>
                             </div>
                             <div class="content-card">
-                            <div class="content-card-title">Completed Complain</div>
-                            <div class="content-card-count">0</div>
-                            <div class="content-card-details">
-                            <a href="#">View Details</a></div>
-                            </div>
-                            <div class="content-card">
-                            <div class="content-card-title">Total Assigned Garbage Bin</div>
-                            <div class="content-card-count">0</div>
-                            <div class="content-card-details">
-                            <a href="#">View Details</a></div>
-                            </div>
-                            <div class="content-card">
-                            <div class="content-card-title">Inprogress</div>
+                            <div class="content-card-title">Completed Requests</div>
                             <div class="content-card-count">0</div>
                             <div class="content-card-details">
                             <a href="#">View Details</a></div>
