--- a/html/admin/driver/add_driver.html
+++ b/html/admin/driver/add_driver.html
@@ -29,15 +29,14 @@
             <hr>
             <div class="side-links">
                 <ul>
-                    <li> <a href="">Dashboard</a></li>
-                    <li> <a href="">Driver</a></li>
-                    <li><a href="">Complains</a></li>
-                    <li><a href="">Registered Users</a></li>
-                    <li><a href="">Collection Requests</a></li>
-                    <li><a href="">Payments</a></li>
+                    <li> <a href="../dashboard.html">Dashboard</a></li>
+                    <li> <a href="../driver/manage_driver.html">Driver</a></li>
+                    <li><a href="../user/complains.html">Complains</a></li>
+                    <li><a href="../user/registered_users.html">Registered Users</a></li>
+                    <li><a href="../user/collection_requests.html">Collection Requests</a></li>
+                    <li><a href="../user/payment.html">Payments</a></li>
                     <li> <a href="">Report</a></li>
                     <li><a href="">Search</a></li>
-                    <li><a href="">Page</a></li>
                 </ul>
             </div>
         </div>
