--- a/html/user/dashboard.html
+++ b/html/user/dashboard.html
@@ -29,17 +29,17 @@
             <hr>
             <div class="side-links">
                 <ul>
-                    <li><i class="fa-solid fa-house"></i> <a href="">Dashboard</a></li>
-                    <li><i class="fa-solid fa-list"></i> <a href="">Requests</a></li>
+                    <li><i class="fa-solid fa-house"></i> <a href="#">Dashboard</a></li>
+                    <li><i class="fa-solid fa-list"></i> <a href="../user/dashboard_links/requests.html ">Requests</a></li>
                     <li><i class="fa-solid fa-trash-arrow-up"></i> <a href="">Create bin</a></li>
-                    <li><i class="fa-solid fa-bell"></i> <a href="">Notifications</a></li>
-                    <li><i class="fa-solid fa-list"></i> <a href="">Complains</a></li>
+                    <li><i class="fa-solid fa-bell"></i> <a href="./dashboard_links/notification.html">Notifications</a></li>
+                    <li><i class="fa-solid fa-list"></i> <a href="./dashboard_links/complains.html">Complains</a></li>
                     <li><i class="fa-solid fa-magnifying-glass"></i> <a href="">Search</a></li>
                 </ul>
             </div>
         </div>
         <div class="container">
-            <div class="content-title">Dashboard</div>
+            <div class="content-title">User Dashboard</div>
             <div class="content">
                 <div class="content-wrapper">
                     <div class="content-name">Welcome <span id="user-name">John Doe</span></div>
