--- a/html/user/dashboard_links/notification.html
+++ b/html/user/dashboard_links/notification.html
@@ -6,13 +6,13 @@
     <title>Admin Dashboard</title>
     <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/5f6453ff01.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../../css/admin/driver/manage_driver.css">
+    <link rel="stylesheet" href="../../../css/user/dashboard_links/notifications.css">
 </head>
 <body>
     <nav>
         <div class="systemname-dashboard">
             <div class="sysname">Garbage Collection Management System</div>
-            <div class="dash-logo"><i class="fa-solid fa-house"></i> / Manage Driver</div>
+            <div class="dash-logo"><i class="fa-solid fa-house"></i> / Notifications</div>
         </div>
         <div class="nav-icons">
             <div class="notification"><i class="fa-solid fa-bell"></i></div>
@@ -23,25 +23,23 @@
         <div class="side-bar">
             <div class="personal-info">
                 <img src="../../../images/person.jpeg" alt="">
-                <div class="name">Admin</div>
+                <div class="name">User</div>
                 <div class="email">Email</div>
             </div>
             <hr>
             <div class="side-links">
                 <ul>
-                    <li> <a href="../dashboard.html">Dashboard</a></li>
-                    <li> <a href="../driver/manage_driver.html">Driver</a></li>
-                    <li><a href="../user/complains.html">Complains</a></li>
-                    <li><a href="../user/registered_users.html">Registered Users</a></li>
-                    <li><a href="../user/collection_requests.html">Collection Requests</a></li>
-                    <li><a href="../user/payment.html">Payments</a></li>
-                    <li> <a href="">Report</a></li>
-                    <li><a href="">Search</a></li>
+                    <li><i class="fa-solid fa-house"></i> <a href="../dashboard.html">Dashboard</a></li>
+                    <li><i class="fa-solid fa-list"></i> <a href="../dashboard_links/requests.html ">Requests</a></li>
+                    <li><i class="fa-solid fa-trash-arrow-up"></i> <a href="">Create bin</a></li>
+                    <li><i class="fa-solid fa-bell"></i> <a href="../dashboard_links/notification.html">Notifications</a></li>
+                    <li><i class="fa-solid fa-list"></i> <a href="../dashboard_links/complains.html">Complains</a></li>
+                    <li><i class="fa-solid fa-magnifying-glass"></i> <a href="">Search</a></li>
                 </ul>
             </div>
         </div>
         <div class="container">
-            <div class="content-title">Manage Driver</div>
+            <div class="content-title">User Notifications</div>
             <div class="content">
                 <div class="content-wrapper">
                     <div class="entries-search">
@@ -63,43 +61,47 @@
                         <table>
                             <thead>
                                     <th>S.No</th>
-                                    <th>Employee ID</th>
                                     <th>Name</th>
-                                    <th>MobileNumber</th>
+                                    <th>Title</th>
                                     <th>Email</th>
+                                    <th>Date</th>
+                                    <th>Information</th>
                                     <th>Action</th>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>1234</td>
-                                    <td>Test</td>
-                                    <td>0789567434</td>
+                                    <td>Test1</td>
+                                    <td>Driver</td>
                                     <td>email@gmail.com</td>
+                                    <td>23/23/23</td>
+                                    <td>Info</td>
                                     <td>
-                                        <button>Edit</button>
+                                        <button>View</button>
                                         <button>Delete</button>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>1234</td>
-                                    <td>Test</td>
-                                    <td>0789567434</td>
+                                    <td>Test2</td>
+                                    <td>User</td>
                                     <td>email@gmail.com</td>
+                                    <td>9/2/24</td>
+                                    <td>Info</td>
                                     <td>
-                                        <button>Edit</button>
+                                        <button>View</button>
                                         <button>Delete</button>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
-                                    <td>1234</td>
-                                    <td>Test</td>
-                                    <td>0789567434</td>
+                                    <td>Test3</td>
+                                    <td>Driver</td>
                                     <td>email@gmail.com</td>
+                                    <td>23/12/23</td>
+                                    <td>Info</td>
                                     <td>
-                                        <button>Edit</button>
+                                        <button>View</button>
                                         <button>Delete</button>
                                     </td>
                                 </tr>
