--- a/html/admin/user/payment.html
+++ b/html/admin/user/payment.html
@@ -6,13 +6,13 @@
     <title>Admin Dashboard</title>
     <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/5f6453ff01.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../../css/admin/driver/manage_driver.css">
+    <link rel="stylesheet" href="../../../css/admin/user/payment.css">
 </head>
 <body>
     <nav>
         <div class="systemname-dashboard">
             <div class="sysname">Garbage Collection Management System</div>
-            <div class="dash-logo"><i class="fa-solid fa-house"></i> / Manage Driver</div>
+            <div class="dash-logo"><i class="fa-solid fa-house"></i> / Users Payments</div>
         </div>
         <div class="nav-icons">
             <div class="notification"><i class="fa-solid fa-bell"></i></div>
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="content-title">Manage Driver</div>
+            <div class="content-title">Users Payments</div>
             <div class="content">
                 <div class="content-wrapper">
                     <div class="entries-search">
@@ -63,19 +63,25 @@
                         <table>
                             <thead>
                                     <th>S.No</th>
-                                    <th>Employee ID</th>
+                                    <th>Payment ID</th>
+                                    <th>Payment Method</th>
                                     <th>Name</th>
                                     <th>MobileNumber</th>
                                     <th>Email</th>
+                                    <th>Date</th>
+                                    <th>Amount(Kshs)</th>
                                     <th>Action</th>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>1</td>
                                     <td>1234</td>
+                                    <td>M-PESA</td>
                                     <td>Test</td>
                                     <td>0789567434</td>
                                     <td>email@gmail.com</td>
+                                    <td>23/23/23</td>
+                                    <td>1000</td>
                                     <td>
                                         <button>Edit</button>
                                         <button>Delete</button>
@@ -84,9 +90,12 @@
                                 <tr>
                                     <td>2</td>
                                     <td>1234</td>
+                                    <td>M-PESA</td>
                                     <td>Test</td>
                                     <td>0789567434</td>
                                     <td>email@gmail.com</td>
+                                    <td>23/23/23</td>
+                                    <td>300</td>
                                     <td>
                                         <button>Edit</button>
                                         <button>Delete</button>
@@ -95,9 +104,12 @@
                                 <tr>
                                     <td>3</td>
                                     <td>1234</td>
+                                    <td>M-PESA</td>
                                     <td>Test</td>
                                     <td>0789567434</td>
                                     <td>email@gmail.com</td>
+                                    <td>23/23/23</td>
+                                    <td>500</td>
                                     <td>
                                         <button>Edit</button>
                                         <button>Delete</button>
