--- a/html/user/signup.html
+++ b/html/user/signup.html
@@ -12,10 +12,11 @@
             <div class="project-title">Garbage Collection Management System</div>
             <form action="#">
                 <div class="form-heading">Register with us</div>
-                <div><input type="text" name="name" id="name" placeholder="Enter your name"></div>
-                <div><input type="text" name="username" id="username" placeholder="Enter your username"></div>
-                <div><input type="text" name="number" id="number" placeholder="Enter your Mobile Number"></div>
-                <div><input type="email" name="email" id="email" placeholder="Enter your email id"></div>
+                <div><input type="text" name="fname" id="fname" placeholder="First name"></div>
+                <div><input type="text" name="lname" id="lname" placeholder="Last name"></div>
+                <div><input type="text" name="username" id="username" placeholder="Username"></div>
+                <div><input type="text" name="number" id="number" placeholder="Mobile Number"></div>
+                <div><input type="email" name="email" id="email" placeholder="Email"></div>
                 <div><input type="password" name="password" id="password" placeholder="Password"></div>
                 <div><button type="submit">Signup</button></div>
                 <ul>
