--- a/html/driver/dashboard.html
+++ b/html/driver/dashboard.html
@@ -29,16 +29,16 @@
             <hr>
             <div class="side-links">
                 <ul>
-                    <li><a href="">Dashboard</a></li>
-                    <li></i> <a href="">Assigned Requsts</a></li>
-                    <li><a href="">Complains</a></li>
+                    <li><a href="./dashboard.html">Dashboard</a></li>
+                    <li></i> <a href="../../html/driver/dashboard_links/assigned_requests.html">Assigned Requsts</a></li>
+                    <li><a href="../../html/driver/dashboard_links/complains.html">Complains</a></li>
                     <li> <a href="">Report</a></li>
                     <li><a href="">Search</a></li>
                 </ul>
             </div>
         </div>
         <div class="container">
-            <div class="content-title">Dashboard</div>
+            <div class="content-title">Driver Dashboard</div>
             <div class="content">
                 <div class="content-wrapper">
                     <div class="content-name">Welcome <span id="user-name">John Doe</span></div>
