--- a/html/driver/dashboard_links/assigned_requests.html
+++ b/html/driver/dashboard_links/assigned_requests.html
@@ -6,13 +6,13 @@
     <title>Admin Dashboard</title>
     <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/5f6453ff01.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../../css/admin/driver/manage_driver.css">
+    <link rel="stylesheet" href="../../../css/driver/dashboard_links/assigned_requests.css">
 </head>
 <body>
     <nav>
         <div class="systemname-dashboard">
             <div class="sysname">Garbage Collection Management System</div>
-            <div class="dash-logo"><i class="fa-solid fa-house"></i> / Collection Requests</div>
+            <div class="dash-logo"><i class="fa-solid fa-house"></i> / Assigned Requests</div>
         </div>
         <div class="nav-icons">
             <div class="notification"><i class="fa-solid fa-bell"></i></div>
@@ -29,19 +29,16 @@
             <hr>
             <div class="side-links">
                 <ul>
-                    <li> <a href="../dashboard.html">Dashboard</a></li>
-                    <li> <a href="../driver/manage_driver.html">Driver</a></li>
-                    <li><a href="../user/complains.html">Complains</a></li>
-                    <li><a href="../user/registered_users.html">Registered Users</a></li>
-                    <li><a href="../user/collection_requests.html">Collection Requests</a></li>
-                    <li><a href="../user/payment.html">Payments</a></li>
+                    <li><a href="../dashboard.html">Dashboard</a></li>
+                    <li></i> <a href="../dashboard_links/assigned_requests.html">Assigned Requsts</a></li>
+                    <li><a href="../dashboard_links/complains.html">Complains</a></li>
                     <li> <a href="">Report</a></li>
                     <li><a href="">Search</a></li>
                 </ul>
             </div>
         </div>
         <div class="container">
-            <div class="content-title">Collection Requests</div>
+            <div class="content-title">Driver Assigned Requests</div>
             <div class="content">
                 <div class="content-wrapper">
                     <div class="entries-search">
@@ -82,7 +79,6 @@
                                     <td>Processing</td>
                                     <td>
                                         <button>View</button>
-                                        <button>Assign</button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -95,7 +91,6 @@
                                     <td>Rejected</td>
                                     <td>
                                         <button>View</button>
-                                        <button>Assign</button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -108,7 +103,6 @@
                                     <td>Approved</td>
                                     <td>
                                         <button>View</button>
-                                        <button>Assign</button>
                                     </td>
                                 </tr>
                             </tbody>
