--- a/html/driver/dashboard_links/complains.html
+++ b/html/driver/dashboard_links/complains.html
@@ -6,13 +6,13 @@
     <title>Admin Dashboard</title>
     <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/5f6453ff01.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../../css/admin/driver/manage_driver.css">
+    <link rel="stylesheet" href="../../../css/driver/dashboard_links/complains.css">
 </head>
 <body>
     <nav>
         <div class="systemname-dashboard">
             <div class="sysname">Garbage Collection Management System</div>
-            <div class="dash-logo"><i class="fa-solid fa-house"></i> / Collection Requests</div>
+            <div class="dash-logo"><i class="fa-solid fa-house"></i> / Complains</div>
         </div>
         <div class="nav-icons">
             <div class="notification"><i class="fa-solid fa-bell"></i></div>
@@ -29,19 +29,16 @@
             <hr>
             <div class="side-links">
                 <ul>
-                    <li> <a href="../dashboard.html">Dashboard</a></li>
-                    <li> <a href="../driver/manage_driver.html">Driver</a></li>
-                    <li><a href="../user/complains.html">Complains</a></li>
-                    <li><a href="../user/registered_users.html">Registered Users</a></li>
-                    <li><a href="../user/collection_requests.html">Collection Requests</a></li>
-                    <li><a href="../user/payment.html">Payments</a></li>
+                    <li><a href="../dashboard.html">Dashboard</a></li>
+                    <li></i> <a href="../dashboard_links/assigned_requests.html">Assigned Requsts</a></li>
+                    <li><a href="../dashboard_links/complains.html">Complains</a></li>
                     <li> <a href="">Report</a></li>
                     <li><a href="">Search</a></li>
                 </ul>
             </div>
         </div>
         <div class="container">
-            <div class="content-title">Collection Requests</div>
+            <div class="content-title">Driver Complains</div>
             <div class="content">
                 <div class="content-wrapper">
                     <div class="entries-search">
@@ -62,53 +59,48 @@
                     <div class="search-table">
                         <table>
                             <thead>
-                                    <th>Request Number</th>
+                                    <th>S.No</th>
                                     <th>Name</th>
-                                    <th>MobileNumber</th>
+                                    <th>Title</th>
+                                    <th>Email</th>
                                     <th>Date</th>
-                                    <th>Area</th>
-                                    <th>Package</th>                                  
-                                    <th>Status</th>
                                     <th>Action</th>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>12349087</td>
-                                    <td>Test</td>
-                                    <td>0789567434</td>
+                                    <td>1</td>
+                                    <td>Test1</td>
+                                    <td>Driver</td>
+                                    <td>email@gmail.com</td>
                                     <td>23/23/23</td>
-                                    <td>Embakasi</td>
-                                    <td>Residential</td>                                   
-                                    <td>Processing</td>
                                     <td>
+                                        <button>Edit</button>
                                         <button>View</button>
-                                        <button>Assign</button>
+                                        <button>Delete</button>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>12349087</td>
-                                    <td>Test</td>
-                                    <td>0789567434</td>
-                                    <td>23/23/23</td>
-                                    <td>Embakasi</td>
-                                    <td>Residential</td>                                   
-                                    <td>Rejected</td>
+                                    <td>2</td>
+                                    <td>Test2</td>
+                                    <td>User</td>
+                                    <td>email@gmail.com</td>
+                                    <td>9/2/24</td>
                                     <td>
+                                        <button>Edit</button>
                                         <button>View</button>
-                                        <button>Assign</button>
+                                        <button>Delete</button>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>12349087</td>
-                                    <td>Test</td>
-                                    <td>0789567434</td>
-                                    <td>23/23/23</td>
-                                    <td>Embakasi</td>
-                                    <td>Residential</td>                                  
-                                    <td>Approved</td>
+                                    <td>3</td>
+                                    <td>Test3</td>
+                                    <td>Driver</td>
+                                    <td>email@gmail.com</td>
+                                    <td>23/12/23</td>
                                     <td>
+                                        <button>Edit</button>
                                         <button>View</button>
-                                        <button>Assign</button>
+                                        <button>Delete</button>
                                     </td>
                                 </tr>
                             </tbody>
